rt.tf
resource "aws_route_table" "public_rt" {
vpc_id = aws_vpc.main.id
route {
cidr_block = "0.0.0.0/0"
gateway_id = aws_internet_gateway.igw.id
}
}


resource "aws_route_table_association" "public_1a_assoc" {
subnet_id = aws_subnet.public_1a.id
route_table_id = aws_route_table.public_rt.id
}


resource "aws_route_table_association" "public_1b_assoc" {
subnet_id = aws_subnet.public_1b.id
route_table_id = aws_route_table.public_rt.id
}


resource "aws_route_table" "private_rt" {
vpc_id = aws_vpc.main.id
route {
cidr_block = "0.0.0.0/0"
nat_gateway_id = aws_nat_gateway.nat.id
}
}


resource "aws_route_table_association" "private_1a_assoc" {
subnet_id = aws_subnet.private_1a.id
route_table_id = aws_route_table.private_rt.id
}


resource "aws_route_table_association" "private_1b_assoc" {
subnet_id = aws_subnet.private_1b.id
route_table_id = aws_route_table.private_rt.id
}
